Modified to process whole dataset in AWS.

--- a/anomalydetector_aws.ipynb
+++ b/anomalydetector_aws.ipynb
@@ -16,7 +16,9 @@
     "import os\n",
     "import os.path as path\n",
     "import glob\n",
+    "import boto3\n",
     "\n",
+    "from sagemaker import get_execution_role\n",
     "from csv import (writer, DictWriter)\n",
     "\n",
     "import pandas as pd\n",
@@ -27,7 +29,6 @@
     "from drain3.template_miner_config import TemplateMinerConfig\n",
     "\n",
     "from spellpy import spell\n",
-    "from fastai.text.all import Numericalize\n",
     "\n",
     "import fasttext\n",
     "\n",
@@ -83,17 +84,11 @@
     "\n",
     "if os.path.exists(log_csv_file):\n",
     "    os.remove(log_csv_file)\n",
-    "\n",
-    "log_file = path.abspath(path.join(project_root, data_dir, log_file_name))\n",
-    "logs = open(log_file, 'r')\n",
-    "\n",
-    "with open(log_csv_file, 'a') as log_csv_file_obj:\n",
-    "    log_csv_writer_obj = writer(log_csv_file_obj)\n",
-    "    for line in logs:\n",
-    "        split_data = line.rstrip('\\n').split(' ')\n",
-    "        split_data[9] = ' '.join(split_data[9:])\n",
-    "        log_csv_writer_obj.writerow(split_data[0:10])\n",
-    "    log_csv_file_obj.close"
+    "#log_file = path.abspath(path.join(project_root, data_dir, log_file_name))\n",
+    "role = get_execution_role()\n",
+    "s3 = boto3.client('s3')\n",
+    "log_file = s3.get_object(Bucket = 'sagemaker-studio-326787221562-jycpwz9gs3f', Key = 'BGL.csv')\n",
+    "log_csv_file = log_file['Body']"
    ]
   },
   {
@@ -1158,8 +1153,8 @@
     "drain_pipe = Pipeline(steps=[('parsing', DrainParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
     "drain_pred_log_seq_anomaly_labels = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
     "\n",
-    "spell_pipe = Pipeline(steps=[('parsing', SpellParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
-    "spell_pred_log_seq_anomaly_labels = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
+    "#spell_pipe = Pipeline(steps=[('parsing', SpellParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
+    "#spell_pred_log_seq_anomaly_labels = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
     "\n",
     "drain_probas_ = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
     "\n",
@@ -1171,9 +1166,9 @@
     "\n",
     "drain_avg_precision = average_precision_score(log_seq_anomaly_labels[test], drain_probas_[:, 1])\n",
     "drain_avg_precisions.append(drain_avg_precision)\n",
-    "    \n",
-    "drain_y_real.append(log_seq_anomaly_labels[test])\n",
-    "drain_y_proba.append(drain_probas_[:, 1])\n",
+    "\n",
+    "np.append(drain_y_real, log_seq_anomaly_labels[test])\n",
+    "np.append(drain_y_proba, drain_probas_[:, 1])\n",
     "\n",
     "####### ROC #######\n",
     "\n",
@@ -1181,7 +1176,7 @@
     "drain_tprs.append(np.interp(drain_mean_fpr, drain_fpr, drain_tpr))\n",
     "drain_tprs2.append(drain_tpr)\n",
     "drain_fprs.append(drain_fpr)\n",
-    "    \n",
+    "\n",
     "drain_tprs[-1][0] = 0.0\n",
     "roc_auc = auc(drain_fpr, drain_tpr)\n",
     "drain_aucs.append(roc_auc)\n",
@@ -1195,49 +1190,7 @@
     "drain_precision_scores.append(precision_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
     "drain_recall_scores.append(recall_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
     "\n",
-    "drain_index += 1\n",
-    "\n",
-    "spell_probas_ = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
-    "\n",
-    "####### PR #######\n",
-    "\n",
-    "spell_precision, spell_recall, _ = precision_recall_curve(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
-    "spell_precisions.append(spell_precision)\n",
-    "spell_recalls.append(spell_recall)\n",
-    "\n",
-    "spell_avg_precision = average_precision_score(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
-    "spell_avg_precisions.append(spell_avg_precision)\n",
-    "    \n",
-    "spell_y_real.append(log_seq_anomaly_labels[test])\n",
-    "spell_y_proba.append(spell_probas_[:, 1])\n",
-    "\n",
-    "####### ROC #######\n",
-    "\n",
-    "spell_fpr, spell_tpr, _ = roc_curve(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
-    "spell_tprs.append(np.interp(spell_mean_fpr, spell_fpr, spell_tpr))\n",
-    "spell_tprs2.append(spell_tpr)\n",
-    "spell_fprs.append(spell_fpr)\n",
-    "    \n",
-    "spell_tprs[-1][0] = 0.0\n",
-    "roc_auc = auc(spell_fpr, spell_tpr)\n",
-    "spell_aucs.append(roc_auc)\n",
-    "\n",
-    "####### F1-score, Accuracy, Precision and Recall #######\n",
-    "\n",
-    "spell_y_pred = spell_pipe.predict(log_seqs[test])\n",
-    "\n",
-    "spell_f1_scores.append(f1_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "spell_accuracy_scores.append(accuracy_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "spell_precision_scores.append(precision_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "spell_recall_scores.append(recall_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "\n",
-    "spell_index += 1\n",
-    "\n",
-    "drain_y_real = np.concatenate(drain_y_real)\n",
-    "drain_y_proba = np.concatenate(drain_y_proba)\n",
-    "\n",
-    "spell_y_real = np.concatenate(spell_y_real)\n",
-    "spell_y_proba = np.concatenate(spell_y_proba)\n"
+    "drain_index += 1"
    ]
   },
   {
@@ -1268,17 +1221,42 @@
     }
    ],
    "source": [
-    "print(spell_f1_scores)\n",
-    "print(drain_f1_scores)\n",
+    "print('F1 Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_f1_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ',drain_f1_scores)\n",
+    "print('\\n')\n",
+    "print('Average Scores')\n",
+    "print('Spell: ', np.average(spell_f1_scores), ' Drain: ', np.average(drain_f1_scores))\n",
     "\n",
-    "print(spell_accuracy_scores)\n",
-    "print(drain_accuracy_scores)\n",
+    "print('\\n')\n",
+    "print('Accuracy Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_accuracy_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ', drain_accuracy_scores)\n",
+    "print('\\n')\n",
+    "print('Average Scores')\n",
+    "print('Spell: ', np.average(spell_accuracy_scores), ' Drain: ', np.average(drain_accuracy_scores))\n",
     "\n",
-    "print(spell_precision_scores)\n",
-    "print(drain_precision_scores)\n",
+    "print('\\n')\n",
+    "print('Precision Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_precision_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ', drain_precision_scores)\n",
+    "print('\\n')\n",
+    "print('Spell: ', np.average(spell_precision_scores), ' Drain: ', np.average(drain_precision_scores))\n",
     "\n",
-    "print(spell_recall_scores)\n",
-    "print(drain_recall_scores)"
+    "print('\\n')\n",
+    "print('Recall Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_recall_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ', drain_recall_scores)\n",
+    "print('\\n')\n",
+    "print('Spell: ', np.average(spell_recall_scores), ' Drain: ', np.average(drain_recall_scores))"
    ]
   },
   {
@@ -1318,17 +1296,42 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix\n",
+    "print('F1 Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_f1_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ',drain_f1_scores)\n",
+    "print('\\n')\n",
+    "print('Average Scores')\n",
+    "print('Spell: ', np.average(spell_f1_scores), ' Drain: ', np.average(drain_f1_scores))\n",
     "\n",
-    "print(drain_y_real)\n",
-    "print(drain_y_pred)\n",
+    "print('\\n')\n",
+    "print('Accuracy Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_accuracy_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ', drain_accuracy_scores)\n",
+    "print('\\n')\n",
+    "print('Average Scores')\n",
+    "print('Spell: ', np.average(spell_accuracy_scores), ' Drain: ', np.average(drain_accuracy_scores))\n",
     "\n",
-    "print(confusion_matrix(drain_y_real, drain_y_pred))\n",
+    "print('\\n')\n",
+    "print('Precision Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_precision_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ', drain_precision_scores)\n",
+    "print('\\n')\n",
+    "print('Spell: ', np.average(spell_precision_scores), ' Drain: ', np.average(drain_precision_scores))\n",
     "\n",
-    "print(spell_y_real)\n",
-    "print(spell_y_pred)\n",
-    "\n",
-    "print(confusion_matrix(spell_y_real, spell_y_pred))"
+    "print('\\n')\n",
+    "print('Recall Scores')\n",
+    "print('\\n')\n",
+    "print('Spell: ', spell_recall_scores)\n",
+    "print('\\n')\n",
+    "print('Drain: ', drain_recall_scores)\n",
+    "print('\\n')\n",
+    "print('Spell: ', np.average(spell_recall_scores), ' Drain: ', np.average(drain_recall_scores))"
    ]
   }
  ],
