--- a/anomalydetector_aws.ipynb
+++ b/anomalydetector_aws.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,18 @@
     "\n",
     "drain_input_dir = 'input/drain'\n",
     "drain_output_dir = 'output/drain'\n",
+    "\n",
+    "if not path.abspath(path.join(project_root, spell_input_dir)):\n",
+    "    os.makedirs(path.abspath(path.join(project_root, spell_input_dir)))\n",
+    "\n",
+    "if not path.abspath(path.join(project_root, spell_output_dir)):\n",
+    "    os.makedirs(path.abspath(path.join(project_root, spell_output_dir)))\n",
+    "\n",
+    "if not path.abspath(path.join(project_root, drain_input_dir)):\n",
+    "    os.makedirs(path.abspath(path.join(project_root, drain_input_dir)))\n",
+    "\n",
+    "if not path.abspath(path.join(project_root, drain_output_dir)):\n",
+    "    os.makedirs(path.abspath(path.join(project_root, drain_output_dir)))\n",
     "\n",
     "WINDOW_SIZE = 5"
    ]
