Corrected spell output dir var.

--- a/anomalydetector_aws.ipynb
+++ b/anomalydetector_aws.ipynb
@@ -55,7 +55,7 @@
     "config_dir = 'config'\n",
     "\n",
     "input_dir = 'input'\n",
-    "spell_output_dir = 'output'\n",
+    "output_dir = 'output'\n",
     "\n",
     "spell_input_dir = 'input/spell'\n",
     "spell_output_dir = 'output/spell'\n",
@@ -984,7 +984,7 @@
     "\n",
     "    def fit(self, template_seqs, y = None):\n",
     "        template_seqs_filename = 'bgl_train_seqs.txt'\n",
-    "        template_seqs_file = path.abspath(path.join(project_root, spell_output_dir, template_seqs_filename))\n",
+    "        template_seqs_file = path.abspath(path.join(project_root, output_dir, template_seqs_filename))\n",
     "        np.savetxt(template_seqs_file, template_seqs, fmt='%s')\n",
     "        self.fasttext_model = fasttext.train_unsupervised(template_seqs_file, model='cbow', minCount=1, dim=self.NUMBER_OF_DIMENSIONS)\n",
     "        \n",
