Batch process for spell parser.

--- a/anomalydetector_aws.ipynb
+++ b/anomalydetector_aws.ipynb
@@ -928,26 +928,30 @@
     "\n",
     "        self.parser = spell.LogParser(indir=spell_input_dir, outdir=spell_output_dir,\n",
     "                             log_format=log_format, tau=tau, logmain='BGL')\n",
+    "        self.batch_size = 100\n",
     "\n",
     "    def fit(self, X, y = None):\n",
+    "        self.template_seqs = []\n",
     "        return self\n",
     "\n",
     "    def transform(self, log_seqs, y = None):\n",
     "        log_seqs_list = log_seqs.reshape([-1]).tolist()\n",
+    "        log_seqs_list = [log_seqs_list[i * self.batch_size :(i+1) * self.batch_size] for i in range((len(log_seqs_list) + self.batch_size - 1) // self.batch_size)]\n",
     "\n",
-    "        ldf = pd.DataFrame(log_seqs_list, columns=['Content'])\n",
-    "        ldf.to_csv(log_content_csv_file, index=False, header=False)\n",
+    "        for log_seqs in log_seqs_list:\n",
+    "            ldf = pd.DataFrame(log_seqs, columns=['Content'])\n",
+    "            ldf.to_csv(log_content_csv_file, index=False, header=False)\n",
     "\n",
-    "        self.parser.parse(log_content_csv_file_name)\n",
+    "            self.parser.parse(log_content_csv_file_name)\n",
     "\n",
-    "        nums = self.numericalize()\n",
-    "        n = math.floor(len(nums)/WINDOW_SIZE)\n",
-    "        nums = np.array(np.split(nums, n))\n",
+    "            nums = self.numericalize()\n",
+    "            n = math.floor(len(nums)/WINDOW_SIZE)\n",
+    "            self.template_seqs.append(np.array(np.split(nums, n)).reshape([-1]).tolist())\n",
+    "            \n",
+    "            # Comment during debug to view parser output\n",
+    "            self.cleanup_files()\n",
     "        \n",
-    "        # Comment during debug to view parser output\n",
-    "        self.cleanup_files()\n",
-    "        \n",
-    "        return nums\n",
+    "        return self.template_seqs\n",
     "\n",
     "    def numericalize(self):\n",
     "        output_df = pd.read_csv(spell_main_structured_csv_file)\n",
@@ -1165,8 +1169,8 @@
     "drain_pipe = Pipeline(steps=[('parsing', DrainParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
     "drain_pred_log_seq_anomaly_labels = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
     "\n",
-    "#spell_pipe = Pipeline(steps=[('parsing', SpellParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
-    "#spell_pred_log_seq_anomaly_labels = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
+    "spell_pipe = Pipeline(steps=[('parsing', SpellParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
+    "spell_pred_log_seq_anomaly_labels = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
     "\n",
     "drain_probas_ = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
     "\n",
@@ -1178,9 +1182,9 @@
     "\n",
     "drain_avg_precision = average_precision_score(log_seq_anomaly_labels[test], drain_probas_[:, 1])\n",
     "drain_avg_precisions.append(drain_avg_precision)\n",
-    "\n",
-    "np.append(drain_y_real, log_seq_anomaly_labels[test])\n",
-    "np.append(drain_y_proba, drain_probas_[:, 1])\n",
+    "    \n",
+    "drain_y_real.append(log_seq_anomaly_labels[test])\n",
+    "drain_y_proba.append(drain_probas_[:, 1])\n",
     "\n",
     "####### ROC #######\n",
     "\n",
@@ -1188,7 +1192,7 @@
     "drain_tprs.append(np.interp(drain_mean_fpr, drain_fpr, drain_tpr))\n",
     "drain_tprs2.append(drain_tpr)\n",
     "drain_fprs.append(drain_fpr)\n",
-    "\n",
+    "    \n",
     "drain_tprs[-1][0] = 0.0\n",
     "roc_auc = auc(drain_fpr, drain_tpr)\n",
     "drain_aucs.append(roc_auc)\n",
@@ -1202,7 +1206,49 @@
     "drain_precision_scores.append(precision_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
     "drain_recall_scores.append(recall_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
     "\n",
-    "drain_index += 1"
+    "drain_index += 1\n",
+    "\n",
+    "spell_probas_ = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
+    "\n",
+    "####### PR #######\n",
+    "\n",
+    "spell_precision, spell_recall, _ = precision_recall_curve(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
+    "spell_precisions.append(spell_precision)\n",
+    "spell_recalls.append(spell_recall)\n",
+    "\n",
+    "spell_avg_precision = average_precision_score(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
+    "spell_avg_precisions.append(spell_avg_precision)\n",
+    "    \n",
+    "spell_y_real.append(log_seq_anomaly_labels[test])\n",
+    "spell_y_proba.append(spell_probas_[:, 1])\n",
+    "\n",
+    "####### ROC #######\n",
+    "\n",
+    "spell_fpr, spell_tpr, _ = roc_curve(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
+    "spell_tprs.append(np.interp(spell_mean_fpr, spell_fpr, spell_tpr))\n",
+    "spell_tprs2.append(spell_tpr)\n",
+    "spell_fprs.append(spell_fpr)\n",
+    "    \n",
+    "spell_tprs[-1][0] = 0.0\n",
+    "roc_auc = auc(spell_fpr, spell_tpr)\n",
+    "spell_aucs.append(roc_auc)\n",
+    "\n",
+    "####### F1-score, Accuracy, Precision and Recall #######\n",
+    "\n",
+    "spell_y_pred = spell_pipe.predict(log_seqs[test])\n",
+    "\n",
+    "spell_f1_scores.append(f1_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
+    "spell_accuracy_scores.append(accuracy_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
+    "spell_precision_scores.append(precision_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
+    "spell_recall_scores.append(recall_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
+    "\n",
+    "spell_index += 1\n",
+    "\n",
+    "drain_y_real = np.concatenate(drain_y_real)\n",
+    "drain_y_proba = np.concatenate(drain_y_proba)\n",
+    "\n",
+    "spell_y_real = np.concatenate(spell_y_real)\n",
+    "spell_y_proba = np.concatenate(spell_y_proba)"
    ]
   },
   {
