--- a/util/convertlogfiletocsv.ipynb
+++ b/util/convertlogfiletocsv.ipynb
@@ -8,28 +8,12 @@
    "source": [
     "import os\n",
     "import os.path as path\n",
-    "import glob\n",
+    "import boto3\n",
+    "import botocore\n",
     "\n",
-    "from csv import (writer, DictWriter)\n",
+    "from csv import writer\n",
     "\n",
-    "import pandas as pd\n",
-    "import math\n",
-    "import numpy as np\n",
-    "\n",
-    "from drain3 import TemplateMiner\n",
-    "from drain3.template_miner_config import TemplateMinerConfig\n",
-    "\n",
-    "from spellpy import spell\n",
-    "from fastai.text.all import Numericalize\n",
-    "\n",
-    "import fasttext\n",
-    "\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
-    "from sklearn.metrics import (confusion_matrix, precision_score, recall_score, f1_score)"
+    "import pandas as pd"
    ]
   },
   {
@@ -43,18 +27,10 @@
     "data_dir = 'data'\n",
     "log_file_name = 'BGL.log'\n",
     "\n",
-    "config_dir = 'config'\n",
-    "\n",
     "input_dir = 'input'\n",
-    "spell_output_dir = 'output'\n",
+    "log_csv_file_name = 'BGL.csv'\n",
     "\n",
-    "spell_input_dir = 'input/spell'\n",
-    "spell_output_dir = 'output/spell'\n",
-    "\n",
-    "drain_input_dir = 'input/drain'\n",
-    "drain_output_dir = 'output/drain'\n",
-    "\n",
-    "WINDOW_SIZE = 5"
+    "bucket_name = 'sagemaker-studio-326787221562-jycpwz9gs3f'"
    ]
   },
   {
@@ -63,23 +39,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_csv_file_name = 'BGL.csv'\n",
     "log_csv_file = log_file = path.abspath(path.join(project_root, '../', input_dir, log_csv_file_name))\n",
-    "\n",
     "if os.path.exists(log_csv_file):\n",
     "    os.remove(log_csv_file)\n",
     "\n",
     "log_file = path.abspath(path.join(project_root, '../', data_dir, log_file_name))\n",
+    "if os.path.exists(log_file):\n",
+    "    os.remove(log_file)\n",
+    "\n",
+    "s3 = boto3.resource('s3')\n",
+    "try:\n",
+    "    s3.Bucket(bucket_name).download_file(log_file_name, log_file)\n",
+    "except botocore.exceptions.ClientError as e:\n",
+    "    if e.response['Error']['Code'] == \"404\":\n",
+    "        print(\"The object does not exist.\")\n",
+    "    else:\n",
+    "        raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "logs = open(log_file, 'r')\n",
     "\n",
+    "original_dataset_len = 0\n",
     "with open(log_csv_file, 'a') as log_csv_file_obj:\n",
     "    log_csv_writer_obj = writer(log_csv_file_obj)\n",
+    "    log_csv_writer_obj.writerow(['Anomaly Type', 'Timestamp (ms)', 'Date', 'Node', 'Timestamp', 'Node Repeat', 'Message Type', 'Component', 'Level', 'Content'])\n",
     "    for line in logs:\n",
+    "        original_dataset_len += 1\n",
     "        split_data = line.rstrip('\\n').split(' ')\n",
     "        if len(split_data) > 9:\n",
     "            split_data[9] = ' '.join(split_data[9:])\n",
     "            log_csv_writer_obj.writerow(split_data[0:10])\n",
     "    log_csv_file_obj.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(log_csv_file)\n",
+    "processed_dataset_len = len(df)\n",
+    "\n",
+    "print('Number of rows without content (rejected) - ', original_dataset_len - processed_dataset_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = boto3.client(\"s3\")\n",
+    "client.upload_file(log_csv_file, bucket_name, log_csv_file_name)"
    ]
   }
  ],
