Revert back changes spell parser batch processing.

--- a/anomalydetector_aws.ipynb
+++ b/anomalydetector_aws.ipynb
@@ -928,30 +928,26 @@
     "\n",
     "        self.parser = spell.LogParser(indir=spell_input_dir, outdir=spell_output_dir,\n",
     "                             log_format=log_format, tau=tau, logmain='BGL')\n",
-    "        self.batch_size = 100\n",
     "\n",
     "    def fit(self, X, y = None):\n",
-    "        self.template_seqs = []\n",
     "        return self\n",
     "\n",
     "    def transform(self, log_seqs, y = None):\n",
     "        log_seqs_list = log_seqs.reshape([-1]).tolist()\n",
-    "        log_seqs_list = [log_seqs_list[i * self.batch_size :(i+1) * self.batch_size] for i in range((len(log_seqs_list) + self.batch_size - 1) // self.batch_size)]\n",
     "\n",
-    "        for log_seqs in log_seqs_list:\n",
-    "            ldf = pd.DataFrame(log_seqs, columns=['Content'])\n",
-    "            ldf.to_csv(log_content_csv_file, index=False, header=False)\n",
+    "        ldf = pd.DataFrame(log_seqs_list, columns=['Content'])\n",
+    "        ldf.to_csv(log_content_csv_file, index=False, header=False)\n",
     "\n",
-    "            self.parser.parse(log_content_csv_file_name)\n",
+    "        self.parser.parse(log_content_csv_file_name)\n",
     "\n",
-    "            nums = self.numericalize()\n",
-    "            n = math.floor(len(nums)/WINDOW_SIZE)\n",
-    "            self.template_seqs.append(np.array(np.split(nums, n)).reshape([-1]).tolist())\n",
-    "            \n",
-    "            # Comment during debug to view parser output\n",
-    "            self.cleanup_files()\n",
+    "        nums = self.numericalize()\n",
+    "        n = math.floor(len(nums)/WINDOW_SIZE)\n",
+    "        nums = np.array(np.split(nums, n))\n",
     "        \n",
-    "        return self.template_seqs\n",
+    "        # Comment during debug to view parser output\n",
+    "        self.cleanup_files()\n",
+    "        \n",
+    "        return nums\n",
     "\n",
     "    def numericalize(self):\n",
     "        output_df = pd.read_csv(spell_main_structured_csv_file)\n",
