Optimized pipeline run by removing repeated calls to fit and transform.

--- a/anomalydetector_aws.ipynb
+++ b/anomalydetector_aws.ipynb
@@ -552,8 +552,9 @@
     }
    ],
    "source": [
-    "original_df = pd.read_csv(log_csv_file, names=['Anomaly Type', 'Timestamp (ms)', 'Date', 'Node', 'Timestamp', 'Node Repeat', 'Message Type', 'Component', 'Level', 'Content'])\n",
+    "original_df = pd.read_csv(log_csv_file)\n",
     "original_df['Anomaly Label'] = np.where(original_df['Anomaly Type'] == '-', 0, 1)\n",
+    "original_df['Timestamp'] = pd.to_datetime(original_df['Timestamp'], format='%Y-%m-%d-%H.%M.%S.%f')\n",
     "original_df.head(n=20)"
    ]
   },
@@ -1163,12 +1164,12 @@
     "    print(train.shape, test.shape)\n",
     "\n",
     "    drain_pipe = Pipeline(steps=[('parsing', DrainParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
-    "    drain_pred_log_seq_anomaly_labels = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
+    "    drain_probas_ = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
+    "    drain_y_pred = drain_pipe.predict(log_seqs[test])\n",
     "\n",
     "    spell_pipe = Pipeline(steps=[('parsing', SpellParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
-    "    spell_pred_log_seq_anomaly_labels = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict(log_seqs[test])\n",
-    "\n",
-    "    drain_probas_ = drain_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
+    "    spell_probas_ = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
+    "    spell_y_pred = spell_pipe.predict(log_seqs[test])\n",
     "\n",
     "    ####### PR #######\n",
     "\n",
@@ -1195,8 +1196,6 @@
     "\n",
     "    ####### F1-score, Accuracy, Precision and Recall #######\n",
     "\n",
-    "    drain_y_pred = drain_pipe.predict(log_seqs[test])\n",
-    "\n",
     "    drain_f1_scores.append(f1_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
     "    drain_accuracy_scores.append(accuracy_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
     "    drain_precision_scores.append(precision_score(log_seq_anomaly_labels[test], drain_y_pred))\n",
@@ -1204,7 +1203,7 @@
     "\n",
     "    drain_index += 1\n",
     "\n",
-    "    spell_probas_ = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
+    "    \n",
     "\n",
     "    ####### PR #######\n",
     "\n",
@@ -1231,8 +1230,6 @@
     "\n",
     "    ####### F1-score, Accuracy, Precision and Recall #######\n",
     "\n",
-    "    spell_y_pred = spell_pipe.predict(log_seqs[test])\n",
-    "\n",
     "    spell_f1_scores.append(f1_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
     "    spell_accuracy_scores.append(accuracy_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
     "    spell_precision_scores.append(precision_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
@@ -1251,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Testing"
+    "#### Print Results"
    ]
   },
   {
