--- a/anomalydetector.ipynb
+++ b/anomalydetector.ipynb
@@ -1636,9 +1636,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('ms-ds13')",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1652,7 +1652,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "b7d5d95ec871826f4c96f39204edc263930b1065d3d6b0d23c0891d0cf865f41"
@@ -1660,5 +1659,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
