Testing spell parser templates.

--- a/test/spell-parser.ipynb
+++ b/test/spell-parser.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "\n",
     "config_dir = 'config'\n",
     "bucket_name = 'sagemaker-studio-326787221562-jycpwz9gs3f'\n",
-    "log_file_key = 'BGL_no200507.csv'\n",
+    "log_file_key = 'BGL_no20050610.csv'\n",
     "pickle_key = 'Testing-Output-' + datetime.now().strftime(\"%d-%m-%Y-%H-%M-%S\") + '.pkl'\n",
     "    \n",
     "WINDOW_SIZE = 5"
@@ -894,7 +894,7 @@
     "        nums = np.array(np.split(nums, n))\n",
     "        \n",
     "        # Comment during debug to view parser output\n",
-    "        #self.cleanup_files()\n",
+    "        self.cleanup_files()\n",
     "        \n",
     "        return nums\n",
     "\n",
@@ -917,7 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Word Embedding"
+    "#### Testing"
    ]
   },
   {
@@ -926,162 +926,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class WordEmbedding(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self) -> None:\n",
-    "        super().__init__()\n",
-    "        self.NUMBER_OF_DIMENSIONS = 100\n",
-    "\n",
-    "    def fit(self, template_seqs, y = None):\n",
-    "        template_seqs_filename = 'bgl_train_seqs.txt'\n",
-    "        template_seqs_file = path.abspath(path.join(project_root, output_dir, template_seqs_filename))\n",
-    "        np.savetxt(template_seqs_file, template_seqs, fmt='%s')\n",
-    "        self.fasttext_model = fasttext.train_unsupervised(template_seqs_file, model='cbow', minCount=1, dim=self.NUMBER_OF_DIMENSIONS)\n",
-    "        \n",
-    "        # Comment during debug to view embedding input\n",
-    "        os.remove(template_seqs_file)\n",
-    "\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, template_seqs, y = None):\n",
-    "        template_seqs_ = template_seqs.copy()\n",
-    "        template_seqs_ = np.apply_along_axis(self.average_embeddings, 1, template_seqs)\n",
-    "\n",
-    "        return template_seqs_\n",
-    "\n",
-    "    def average_embeddings(self, num_lse_vector):\n",
-    "        s2v_vector = self.fasttext_model.get_sentence_vector(' '.join(np.vectorize(str)(num_lse_vector)))\n",
-    "        return s2v_vector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drain_y_real = []\n",
-    "drain_y_proba = []\n",
-    "\n",
-    "drain_precisions = []\n",
-    "drain_recalls = []\n",
-    "drain_avg_precisions = []\n",
-    "\n",
-    "drain_tprs = []\n",
-    "drain_tprs2 = []\n",
-    "drain_fprs = []\n",
-    "drain_aucs = []\n",
-    "drain_mean_fpr = np.linspace(0, 1, 100)\n",
-    "\n",
-    "drain_f1_scores = []\n",
-    "drain_accuracy_scores = []\n",
-    "drain_precision_scores = []\n",
-    "drain_recall_scores = []\n",
-    "\n",
-    "drain_index = 0\n",
-    "\n",
-    "spell_y_real = []\n",
-    "spell_y_proba = []\n",
-    "\n",
-    "spell_precisions = []\n",
-    "spell_recalls = []\n",
-    "spell_avg_precisions = []\n",
-    "\n",
-    "spell_tprs = []\n",
-    "spell_tprs2 = []\n",
-    "spell_fprs = []\n",
-    "spell_aucs = []\n",
-    "spell_mean_fpr = np.linspace(0, 1, 100)\n",
-    "\n",
-    "spell_f1_scores = []\n",
-    "spell_accuracy_scores = []\n",
-    "spell_precision_scores = []\n",
-    "spell_recall_scores = []\n",
-    "\n",
-    "spell_index = 0\n",
-    "\n",
     "cv = RepeatedStratifiedKFold(n_splits=3, n_repeats=2, random_state=0)\n",
     "for train, test in cv.split(log_seqs, log_seq_anomaly_labels):\n",
     "    print(train.shape, test.shape)\n",
     "\n",
-    "spell_pipe = Pipeline(steps=[('parsing', SpellParser()), ('word_embedding', WordEmbedding()), ('gnb', GaussianNB())])\n",
-    "#spell_pipe = pipe = Pipeline(steps=[('parsing', Parsing()), ('word_embedding', WordEmbedding()), ('random_forest', RandomForestClassifier(n_estimators=100, random_state=0, n_jobs=-1))\n",
-    "spell_probas_ = spell_pipe.fit(log_seqs[train], log_seq_anomaly_labels[train]).predict_proba(log_seqs[test])\n",
-    "spell_y_pred = spell_pipe.predict(log_seqs[test])\n",
-    "\n",
-    "####### PR #######\n",
-    "\n",
-    "spell_precision, spell_recall, _ = precision_recall_curve(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
-    "spell_precisions.append(spell_precision)\n",
-    "spell_recalls.append(spell_recall)\n",
-    "\n",
-    "spell_avg_precision = average_precision_score(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
-    "spell_avg_precisions.append(spell_avg_precision)\n",
-    "\n",
-    "spell_y_real.append(log_seq_anomaly_labels[test])\n",
-    "spell_y_proba.append(spell_probas_[:, 1])\n",
-    "\n",
-    "####### ROC #######\n",
-    "\n",
-    "spell_fpr, spell_tpr, _ = roc_curve(log_seq_anomaly_labels[test], spell_probas_[:, 1])\n",
-    "spell_tprs.append(np.interp(spell_mean_fpr, spell_fpr, spell_tpr))\n",
-    "spell_tprs2.append(spell_tpr)\n",
-    "spell_fprs.append(spell_fpr)\n",
-    "\n",
-    "spell_tprs[-1][0] = 0.0\n",
-    "roc_auc = auc(spell_fpr, spell_tpr)\n",
-    "spell_aucs.append(roc_auc)\n",
-    "\n",
-    "####### F1-score, Accuracy, Precision and Recall #######\n",
-    "\n",
-    "spell_f1_scores.append(f1_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "spell_accuracy_scores.append(accuracy_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "spell_precision_scores.append(precision_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "spell_recall_scores.append(recall_score(log_seq_anomaly_labels[test], spell_y_pred))\n",
-    "\n",
-    "spell_index += 1\n",
-    "\n",
-    "spell_y_real = np.concatenate(spell_y_real)\n",
-    "spell_y_proba = np.concatenate(spell_y_proba)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Print Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('F1 Scores')\n",
-    "print('Spell: ', spell_f1_scores)\n",
-    "print('Average Scores - ', 'Spell: ', np.average(spell_f1_scores))\n",
-    "print('\\n')\n",
-    "\n",
-    "print('Accuracy Scores')\n",
-    "print('Spell: ', spell_accuracy_scores)\n",
-    "print('Average Scores - ', 'Spell: ', np.average(spell_accuracy_scores))\n",
-    "print('\\n')\n",
-    "\n",
-    "print('Precision Scores')\n",
-    "print('Spell: ', spell_precision_scores)\n",
-    "print('Average Scores - ', 'Spell: ', np.average(spell_precision_scores))\n",
-    "print('\\n')\n",
-    "\n",
-    "print('Recall Scores')\n",
-    "print('Spell: ', spell_recall_scores)\n",
-    "print('Average Scores - ', 'Spell: ', np.average(spell_recall_scores))"
+    "spellParser = SpellParser()\n",
+    "spellParser.fit(log_seqs[train], log_seq_anomaly_labels[train])\n",
+    "spellParser.transform(log_seqs[train], log_seq_anomaly_labels[train])"
    ]
   },
   {
@@ -1094,40 +945,6 @@
     "\n",
     "#s3_resource = boto3.resource(\"s3\")\n",
     "#s3_resource.Object(bucket_name, pickle_key).put(Body=pickle_byte_obj)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = glob.glob(spell_input_dir + '/*')\n",
-    "for f in files:\n",
-    "    os.remove(f)\n",
-    "\n",
-    "files = glob.glob(spell_output_dir + '/*')\n",
-    "for f in files:\n",
-    "    os.remove(f)\n",
-    "    \n",
-    "test_log_seqs = log_seqs[train]\n",
-    "test_log_seq_anomaly_labels = log_seq_anomaly_labels[train]\n",
-    "\n",
-    "print(test_log_seqs.shape)\n",
-    "print(test_log_seq_anomaly_labels.shape)\n",
-    "\n",
-    "spell_parser = SpellParser()\n",
-    "spell_parser.fit(test_log_seqs, test_log_seq_anomaly_labels)\n",
-    "spell_template_seqs_output = spell_parser.transform(test_log_seqs, test_log_seq_anomaly_labels)\n",
-    "for templ_seq in spell_template_seqs_output:\n",
-    "    print(templ_seq)"
    ]
   }
  ],
